--- a/Main_screen.kv
+++ b/Main_screen.kv
@@ -1,3 +1,4 @@
+
 #:import RiseInTransition kivy.uix.screenmanager.RiseInTransition
 #:import FallOutTransition kivy.uix.screenmanager.FallOutTransition
 #:import NoTransition kivy.uix.screenmanager.NoTransition
@@ -7,8 +8,9 @@
 # WipeTransition, FallOutTransition, RiseInTransition)
 
 ScreenOne:
-    user_name:user_name
-    date: date
+    # user_name:user_name
+    # todo_list:todo_list
+    # date: date
     name: "main"
     SHOWTODO:
         Label:
@@ -62,278 +64,122 @@ ScreenOne:
 			bar_width: 3
             bar_color: 1 ,0 , .5, 1
             GridLayout:
-                #id: todo_list
-				cols: 2
+                id:todo_list
+				cols: 1
 				height: self.minimum_height
 				row_default_height: 80
 				size_hint_y: None
 				padding: (15, 10)
-                Label:
-                    text: "[b]Description[/b]"
-                    markup: True
-                    font_size: "15dp"
-                    pos: "20dp", "400dp"
-                    size: "100dp", "28dp"
-                    background_color: 0 ,0 , 0, 1
-                    canvas.before:
-                        Color:
-                            rgba: self.background_color
-                        Rectangle:
-                            size: self.size
-                            pos: self.pos
-
-                TextInput:
-                    id: description
-                    size_hint: None, None
-                    width: "310dp"
-                    height: "100dp"
-                    pos: "20dp", "300dp"
-                    multiline: True
-                
-                Label:
-                    text: "[b]Description[/b]"
-                    markup: True
-                    font_size: "15dp"
-                    pos: "20dp", "400dp"
-                    size: "100dp", "28dp"
-                    background_color: 0 ,0 , 0, 1
-                    canvas.before:
-                        Color:
-                            rgba: self.background_color
-                        Rectangle:
-                            size: self.size
-                            pos: self.pos
-
-                TextInput:
-                    id: description
-                    size_hint: None, None
-                    width: "310dp"
-                    height: "100dp"
-                    pos: "20dp", "300dp"
-                    multiline: True
-                
-                Label:
-                    text: "[b]Description[/b]"
-                    markup: True
-                    font_size: "15dp"
-                    pos: "20dp", "400dp"
-                    size: "100dp", "28dp"
-                    background_color: 0 ,0 , 0, 1
-                    canvas.before:
-                        Color:
-                            rgba: self.background_color
-                        Rectangle:
-                            size: self.size
-                            pos: self.pos
-
-                TextInput:
-                    id: description
-                    size_hint: None, None
-                    width: "310dp"
-                    height: "100dp"
-                    pos: "20dp", "300dp"
-                    multiline: True
-                
-                Label:
-                    text: "[b]Description[/b]"
-                    markup: True
-                    font_size: "15dp"
-                    pos: "20dp", "400dp"
-                    size: "100dp", "28dp"
-                    background_color: 0 ,0 , 0, 1
-                    canvas.before:
-                        Color:
-                            rgba: self.background_color
-                        Rectangle:
-                            size: self.size
-                            pos: self.pos
-
-                TextInput:
-                    id: description
-                    size_hint: None, None
-                    width: "310dp"
-                    height: "100dp"
-                    pos: "20dp", "300dp"
-                    multiline: True
-                
-                Label:
-                    text: "[b]Description[/b]"
-                    markup: True
-                    font_size: "15dp"
-                    pos: "20dp", "400dp"
-                    size: "100dp", "28dp"
-                    background_color: 0 ,0 , 0, 1
-                    canvas.before:
-                        Color:
-                            rgba: self.background_color
-                        Rectangle:
-                            size: self.size
-                            pos: self.pos
-
-                TextInput:
-                    id: description
-                    size_hint: None, None
-                    width: "310dp"
-                    height: "100dp"
-                    pos: "20dp", "300dp"
-                    multiline: True
-                
-                Label:
-                    text: "[b]Description[/b]"
-                    markup: True
-                    font_size: "15dp"
-                    pos: "20dp", "400dp"
-                    size: "100dp", "28dp"
-                    background_color: 0 ,0 , 0, 1
-                    canvas.before:
-                        Color:
-                            rgba: self.background_color
-                        Rectangle:
-                            size: self.size
-                            pos: self.pos
-
-                TextInput:
-                    id: description
-                    size_hint: None, None
-                    width: "310dp"
-                    height: "100dp"
-                    pos: "20dp", "300dp"
-                    multiline: True
-                
-                Label:
-                    text: "[b]Description[/b]"
-                    markup: True
-                    font_size: "15dp"
-                    pos: "20dp", "400dp"
-                    size: "100dp", "28dp"
-                    background_color: 0 ,0 , 0, 1
-                    canvas.before:
-                        Color:
-                            rgba: self.background_color
-                        Rectangle:
-                            size: self.size
-                            pos: self.pos
-
-                TextInput:
-                    id: description
-                    size_hint: None, None
-                    width: "310dp"
-                    height: "100dp"
-                    pos: "20dp", "300dp"
-                    multiline: True
-                
-                Label:
-                    text: "[b]Description[/b]"
-                    markup: True
-                    font_size: "15dp"
-                    pos: "20dp", "400dp"
-                    size: "100dp", "28dp"
-                    background_color: 0 ,0 , 0, 1
-                    canvas.before:
-                        Color:
-                            rgba: self.background_color
-                        Rectangle:
-                            size: self.size
-                            pos: self.pos
-
-                TextInput:
-                    id: description
-                    size_hint: None, None
-                    width: "310dp"
-                    height: "100dp"
-                    pos: "20dp", "300dp"
-                    multiline: True
-                
-                Label:
-                    text: "[b]Description[/b]"
-                    markup: True
-                    font_size: "15dp"
-                    pos: "20dp", "400dp"
-                    size: "100dp", "28dp"
-                    background_color: 0 ,0 , 0, 1
-                    canvas.before:
-                        Color:
-                            rgba: self.background_color
-                        Rectangle:
-                            size: self.size
-                            pos: self.pos
-
-                TextInput:
-                    id: description
-                    size_hint: None, None
-                    width: "310dp"
-                    height: "100dp"
-                    pos: "20dp", "300dp"
-                    multiline: True
-                
-                Label:
-                    text: "[b]Description[/b]"
-                    markup: True
-                    font_size: "15dp"
-                    pos: "20dp", "400dp"
-                    size: "100dp", "28dp"
-                    background_color: 0 ,0 , 0, 1
-                    canvas.before:
-                        Color:
-                            rgba: self.background_color
-                        Rectangle:
-                            size: self.size
-                            pos: self.pos
-
-                TextInput:
-                    id: description
-                    size_hint: None, None
-                    width: "310dp"
-                    height: "100dp"
-                    pos: "20dp", "300dp"
-                    multiline: True
-                
-                Label:
-                    text: "[b]Description[/b]"
-                    markup: True
-                    font_size: "15dp"
-                    pos: "20dp", "400dp"
-                    size: "100dp", "28dp"
-                    background_color: 0 ,0 , 0, 1
-                    canvas.before:
-                        Color:
-                            rgba: self.background_color
-                        Rectangle:
-                            size: self.size
-                            pos: self.pos
-
-                TextInput:
-                    id: description
-                    size_hint: None, None
-                    width: "310dp"
-                    height: "100dp"
-                    pos: "20dp", "300dp"
-                    multiline: True
-                
-                Label:
-                    text: "[b]Description[/b]"
-                    markup: True
-                    font_size: "15dp"
-                    pos: "20dp", "400dp"
-                    size: "100dp", "28dp"
-                    background_color: 0 ,0 , 0, 1
-                    canvas.before:
-                        Color:
-                            rgba: self.background_color
-                        Rectangle:
-                            size: self.size
-                            pos: self.pos
-
-                TextInput:
-                    id: description
-                    size_hint: None, None
-                    width: "310dp"
-                    height: "100dp"
-                    pos: "20dp", "300dp"
-                    multiline: True
-
-
-
+                # spacing: "0dp", "10dp"
 
 <SHOWTODO>:
+<Task_title>
+    Label:
+        text: "[b]Title in the app for the course[/b]"
+        markup: True
+        font_size: "15dp"
+        pos: "25dp", "300dp"
+        size: "255dp", "25dp"
+        background_color: 0, 0, 0, 1
+        canvas.before:
+            Color:
+                rgba: self.background_color
+            Rectangle:
+                size: self.size
+                pos: self.pos 
+
+<Task_bar>
+    Label:
+        text: ""
+        id: bar
+        # markup: True
+        # font_size: "15dp"
+        pos: "20dp", "229dp"
+        size: "5dp", "96dp"
+        background_color: 1 ,1 , 0, 1
+        canvas.before:
+            Color:
+                rgba: self.background_color
+            Rectangle:
+                size: self.size
+                pos: self.pos 
+
+<Task_description>
+    Label:
+        id: desc
+        text: "[b]Description[/b]"
+        markup: True
+        font_size: "15dp"
+        pos: "25dp", "229dp"
+        size: "280dp", "70dp"
+        background_color: 0, 0, 0, 1
+        canvas.before:
+            Color:
+                rgba: self.background_color
+            Rectangle:
+                size: self.size
+                pos: self.pos 
+<Task_check>
+    CheckBox:
+        id: checkbtn
+        size_hint: None,None
+		size: "50dp", "67dp"
+        pos: "270dp", "280dp"
+        active:False
+        # on_active:app.complete(bar, checkbtn.state, desc)
+
+
+# <LayOut>:
+#     Label:
+#         text: "[b]Title in the app for the course[/b]"
+#         markup: True
+#         font_size: "15dp"
+#         pos: "25dp", "300dp"
+#         size: "285dp", "25dp"
+#         background_color: 0, 0, 0, 1
+#         canvas.before:
+#             Color:
+#                 rgba: self.background_color
+#             Rectangle:
+#                 size: self.size
+#                 pos: self.pos 
+#     Label:
+#         text: ""
+#         id: bar
+#         # markup: True
+#         # font_size: "15dp"
+#         pos: "20dp", "229dp"
+#         size: "5dp", "96dp"
+#         background_color: 1 ,1 , 0, 1
+#         canvas.before:
+#             Color:
+#                 rgba: self.background_color
+#             Rectangle:
+#                 size: self.size
+#                 pos: self.pos 
+#     Label:
+#         id: desc
+#         text: "[b]Description[/b]"
+#         markup: True
+#         font_size: "15dp"
+#         pos: "25dp", "229dp"
+#         size: "310dp", "70dp"
+#         background_color: 0, 0, 0, 1
+#         canvas.before:
+#             Color:
+#                 rgba: self.background_color
+#             Rectangle:
+#                 size: self.size
+#                 pos: self.pos 
+
+#     CheckBox:
+#         id: checkbtn
+#         size_hint: None,None
+# 		size: "50dp", "67dp"
+#         pos: "295dp", "280dp"
+#         active:False
+#         on_active:app.complete(bar, checkbtn.state, desc)
+
+
+
 
